fix section-list gap

--- a/styles/style.css
+++ b/styles/style.css
@@ -143,7 +143,7 @@
 
 .section__list {
   display: grid;
-  gap: 10px;
+  gap: 20px;
 }
 
 .section__content {
@@ -236,10 +236,6 @@
     margin-block-start: 80px;
   }
 
-  .section__list {
-    gap: 20px
-  }
-
   .section:not(.section-gallery) {
     grid-template-columns: 236px 1fr;
   }
@@ -267,7 +263,7 @@
     grid-column-start: span 2;
   }
 
-  .gallery__image:nth-child(2), 
+  .gallery__image:nth-child(2),
   .gallery__image:nth-child(3) {
     grid-row-start: span 2;
   }
@@ -286,7 +282,7 @@
   .header__theme-menu-list {
     flex-direction: row;
   }
-  
+
   .section:not(.section-gallery) {
     grid-template-columns: 1fr 2fr;
   }
